HB-6 Add filter action on expenses controller
