# swagger/v1/swagger.yaml
@@ -794,9 +794,9 @@
         }
       }
     },
-    "/expenses/date_range": {
+    "/expenses/filter": {
       "get": {
-        "summary": "Retrieves expenses within a date range",
+        "summary": "Filters expenses based on various parameters",
         "tags": [
           "Expenses"
         ],
@@ -812,7 +812,7 @@
             "name": "start_date",
             "in": "query",
             "format": "date",
-            "description": "Start date of the range",
+            "description": "Start date for filtering",
             "schema": {
               "type": "string"
             }
@@ -821,18 +821,45 @@
             "name": "end_date",
             "in": "query",
             "format": "date",
-            "description": "End date of the range",
+            "description": "End date for filtering",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "min_price",
+            "in": "query",
+            "description": "Minimum price for filtering",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "max_price",
+            "in": "query",
+            "description": "Maximum price for filtering",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "category_id",
+            "in": "query",
+            "description": "Category ID for filtering",
+            "schema": {
+              "type": "integer"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "expenses within date range found"
+            "description": "expenses filtered by category"
           },
           "400": {
-            "description": "invalid date range"
+            "description": "min price greater than max price"
+          },
+          "404": {
+            "description": "category not found"
           }
         }
       }
